--- a/content/resources/8-871f04-th.md
+++ b/content/resources/8-871f04-th.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: New image Upload
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/8-871-selected-topics-in-theoretical-particle-physics-branes-and-gauge-theory-dynamics-fall-2004/37cccee21b00eba9b5c52019f33203c5_8-871f04-th.jpg
+file: /media/courses/8-871-selected-topics-in-theoretical-particle-physics-branes-and-gauge-theory-dynamics-fall-2004/37cccee21b00eba9b5c52019f33203c5_8-871f04-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Brane tiling for the complex cone over the third del-Pezzo surface. Red
@@ -10,6 +10,8 @@ image_metadata:
     Madeleine Sheldon-Dante.)
   credit: ''
   image-alt: Brane tiling for complex cone over third del-Pezzo surface.
+learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: 8-871f04-th.jpg
 uid: 37cccee2-1b00-eba9-b5c5-2019f33203c5
