Sync all content

--- a/content/resources/ps10.md
+++ b/content/resources/ps10.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 6a7f6cfd-3368-327b-8ab1-c4a04825d3a6
 resourcetype: Document
 title: ps10.pdf
 uid: 690b12fc-e2d9-5a30-d179-23624cacb9f8
