--- a/content/resources/ps11.md
+++ b/content/resources/ps11.md
@@ -9,6 +9,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 6a7f6cfd-3368-327b-8ab1-c4a04825d3a6
 resourcetype: Document
 title: ps11.pdf
 uid: 7c9c194c-cf3d-8fb4-7400-35ea0a35fb5d
