--- a/content/resources/ps12.md
+++ b/content/resources/ps12.md
@@ -9,6 +9,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 6a7f6cfd-3368-327b-8ab1-c4a04825d3a6
 resourcetype: Document
 title: ps12.pdf
 uid: 1d4c5fe1-aeb8-4d69-24c3-6b15bc0bb529
