--- a/content/resources/ps13.md
+++ b/content/resources/ps13.md
@@ -10,6 +10,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 6a7f6cfd-3368-327b-8ab1-c4a04825d3a6
 resourcetype: Document
 title: ps13.pdf
 uid: a930d42c-68e1-afee-4f32-467b16ef1d53
