--- a/content/resources/ps10.md
+++ b/content/resources/ps10.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This resource contains the problem based on Dual Coxeter numbers.
-file: /media/courses/8-871-selected-topics-in-theoretical-particle-physics-branes-and-gauge-theory-dynamics-fall-2004/690b12fce2d95a30d17923624cacb9f8_ps10.pdf
+file: /courses/8-871-selected-topics-in-theoretical-particle-physics-branes-and-gauge-theory-dynamics-fall-2004/690b12fce2d95a30d17923624cacb9f8_ps10.pdf
 file_type: application/pdf
 learning_resource_types:
 - Assignments
@@ -13,3 +13,5 @@ resourcetype: Document
 title: ps10.pdf
 uid: 690b12fc-e2d9-5a30-d179-23624cacb9f8
 ---
+This resource contains the problem based on Dual Coxeter numbers.
+
