--- a/content/resources/ps11.md
+++ b/content/resources/ps11.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: This resource contains the problem based on equations for supersymmetric
   gauge theories.
-file: /media/courses/8-871-selected-topics-in-theoretical-particle-physics-branes-and-gauge-theory-dynamics-fall-2004/7c9c194ccf3d8fb4740035ea0a35fb5d_ps11.pdf
+file: /courses/8-871-selected-topics-in-theoretical-particle-physics-branes-and-gauge-theory-dynamics-fall-2004/7c9c194ccf3d8fb4740035ea0a35fb5d_ps11.pdf
 file_type: application/pdf
 learning_resource_types:
 - Assignments
@@ -14,3 +14,5 @@ resourcetype: Document
 title: ps11.pdf
 uid: 7c9c194c-cf3d-8fb4-7400-35ea0a35fb5d
 ---
+This resource contains the problem based on equations for supersymmetric gauge theories.
+
