--- a/content/resources/ps12.md
+++ b/content/resources/ps12.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: This resource contains the problem based on the string coupling and vector
   multiplets.
-file: /media/courses/8-871-selected-topics-in-theoretical-particle-physics-branes-and-gauge-theory-dynamics-fall-2004/1d4c5fe1aeb84d6924c36b15bc0bb529_ps12.pdf
+file: /courses/8-871-selected-topics-in-theoretical-particle-physics-branes-and-gauge-theory-dynamics-fall-2004/1d4c5fe1aeb84d6924c36b15bc0bb529_ps12.pdf
 file_type: application/pdf
 learning_resource_types:
 - Assignments
@@ -14,3 +14,5 @@ resourcetype: Document
 title: ps12.pdf
 uid: 1d4c5fe1-aeb8-4d69-24c3-6b15bc0bb529
 ---
+This resource contains the problem based on the string coupling and vector multiplets.
+
