--- a/content/resources/ps13.md
+++ b/content/resources/ps13.md
@@ -3,7 +3,7 @@ content_type: resource
 description: This resource contains the problem based on mirror symmetry in 3 dimensions,
   five dimensional fixed points and their low energy gauge theory limits, continuation
   past infinite coupling.
-file: /media/courses/8-871-selected-topics-in-theoretical-particle-physics-branes-and-gauge-theory-dynamics-fall-2004/a930d42c68e1afee4f32467b16ef1d53_ps13.pdf
+file: /courses/8-871-selected-topics-in-theoretical-particle-physics-branes-and-gauge-theory-dynamics-fall-2004/a930d42c68e1afee4f32467b16ef1d53_ps13.pdf
 file_type: application/pdf
 learning_resource_types:
 - Assignments
@@ -15,3 +15,5 @@ resourcetype: Document
 title: ps13.pdf
 uid: a930d42c-68e1-afee-4f32-467b16ef1d53
 ---
+This resource contains the problem based on mirror symmetry in 3 dimensions, five dimensional fixed points and their low energy gauge theory limits, continuation past infinite coupling.
+
