Sync all content

--- a/content/resources/8-871f04.md
+++ b/content/resources/8-871f04.md
@@ -14,10 +14,10 @@ image_metadata:
   credit: ''
   image-alt: Brane tiling for complex cone over third del-Pezzo surface.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 8-871f04.jpg
 uid: b7d8df29-da66-2e3b-cd6f-9495a53b120b
 ---
 Brane tiling for the complex cone over the third del-Pezzo surface. Red lines are NS branes, faces, are D5 branes. The gauge theory consists of 6 gauge groups, 14 fields, and 8 interaction terms. (Image courtesy of Amihay Hanany and Madeleine Sheldon-Dante).
-
