--- a/content/resources/8-871f04-th.md
+++ b/content/resources/8-871f04-th.md
@@ -11,10 +11,10 @@ image_metadata:
   credit: ''
   image-alt: Brane tiling for complex cone over third del-Pezzo surface.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 8-871f04-th.jpg
 uid: 37cccee2-1b00-eba9-b5c5-2019f33203c5
 ---
 New image Upload
-
