--- a/content/resources/ps10.md
+++ b/content/resources/ps10.md
@@ -5,6 +5,7 @@ file: /courses/8-871-selected-topics-in-theoretical-particle-physics-branes-and-
 file_type: application/pdf
 learning_resource_types:
 - Assignments
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: ps10.pdf
 uid: 690b12fc-e2d9-5a30-d179-23624cacb9f8
 ---
 This resource contains the problem based on Dual Coxeter numbers.
-
