--- a/content/resources/ps11.md
+++ b/content/resources/ps11.md
@@ -6,6 +6,7 @@ file: /courses/8-871-selected-topics-in-theoretical-particle-physics-branes-and-
 file_type: application/pdf
 learning_resource_types:
 - Assignments
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
@@ -15,4 +16,3 @@ title: ps11.pdf
 uid: 7c9c194c-cf3d-8fb4-7400-35ea0a35fb5d
 ---
 This resource contains the problem based on equations for supersymmetric gauge theories.
-
