--- a/content/resources/ps12.md
+++ b/content/resources/ps12.md
@@ -6,6 +6,7 @@ file: /courses/8-871-selected-topics-in-theoretical-particle-physics-branes-and-
 file_type: application/pdf
 learning_resource_types:
 - Assignments
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
@@ -15,4 +16,3 @@ title: ps12.pdf
 uid: 1d4c5fe1-aeb8-4d69-24c3-6b15bc0bb529
 ---
 This resource contains the problem based on the string coupling and vector multiplets.
-
