--- a/content/resources/ps13.md
+++ b/content/resources/ps13.md
@@ -7,6 +7,7 @@ file: /courses/8-871-selected-topics-in-theoretical-particle-physics-branes-and-
 file_type: application/pdf
 learning_resource_types:
 - Assignments
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
@@ -16,4 +17,3 @@ title: ps13.pdf
 uid: a930d42c-68e1-afee-4f32-467b16ef1d53
 ---
 This resource contains the problem based on mirror symmetry in 3 dimensions, five dimensional fixed points and their low energy gauge theory limits, continuation past infinite coupling.
-
