Sync all content

--- a/content/resources/ps10.md
+++ b/content/resources/ps10.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: This resource contains the problem based on Dual Coxeter numbers.
 file: /courses/8-871-selected-topics-in-theoretical-particle-physics-branes-and-gauge-theory-dynamics-fall-2004/690b12fce2d95a30d17923624cacb9f8_ps10.pdf
+file_size: 62595
 file_type: application/pdf
 learning_resource_types:
 - Assignments
