--- a/content/resources/8-871f04-th.md
+++ b/content/resources/8-871f04-th.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: New image Upload
 file: /courses/8-871-selected-topics-in-theoretical-particle-physics-branes-and-gauge-theory-dynamics-fall-2004/37cccee21b00eba9b5c52019f33203c5_8-871f04-th.jpg
+file_size: 12277
 file_type: image/jpeg
 image_metadata:
   caption: Brane tiling for the complex cone over the third del-Pezzo surface. Red
