--- a/content/resources/8-871f04.md
+++ b/content/resources/8-871f04.md
@@ -5,6 +5,7 @@ description: Brane tiling for the complex cone over the third del-Pezzo surface.
   groups, 14 fields, and 8 interaction terms. (Image courtesy of Amihay Hanany and
   Madeleine Sheldon-Dante).
 file: /courses/8-871-selected-topics-in-theoretical-particle-physics-branes-and-gauge-theory-dynamics-fall-2004/b7d8df29da662e3bcd6f9495a53b120b_8-871f04.jpg
+file_size: 129556
 file_type: image/jpeg
 image_metadata:
   caption: Brane tiling for the complex cone over the third del-Pezzo surface. Red
