--- a/content/resources/ps13.md
+++ b/content/resources/ps13.md
@@ -4,6 +4,7 @@ description: This resource contains the problem based on mirror symmetry in 3 di
   five dimensional fixed points and their low energy gauge theory limits, continuation
   past infinite coupling.
 file: /courses/8-871-selected-topics-in-theoretical-particle-physics-branes-and-gauge-theory-dynamics-fall-2004/a930d42c68e1afee4f32467b16ef1d53_ps13.pdf
+file_size: 50639
 file_type: application/pdf
 learning_resource_types:
 - Assignments
